# fast-api-test

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/routers/: user.py
tests/: test_user.py
